# rpg-rules-paralegal

./: .gitignore  LICENSE  README.md  looking-at-5e-srd.ipynb  pyproject.toml
indexing/: README.md  pyproject.toml
indexing/indexing/: index_5e_srd.py
indexing/indexing/parsing/: srd_5e.py
investigations/: README.md  looking-at-5e-srd.ipynb  pyproject.toml
rules_paralegal/: pyproject.toml
