[tool.poetry]
name = "rules-paralegal"
version = "0.1.0"
description = ""
authors = ["Sean Wedig <sean.wedig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.1"
langchain-community = "^0.0.13"
ipykernel = "^6.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
